# portal

./: LICENSE  README.md  main.py
Rust/src/: main.rs
python/: main.py  requirements.txt
rust/CLI/: Cargo.toml
rust/UI/: README.md
rust/UI/src/: index.html  main.js  styles.css
rust/UI/src-tauri/: Cargo.toml  tauri.conf.json
rust/UI/src-tauri/src/: main.rs
