[package]
name = "portal_finder_ui"
version = "1.0.1"
description = "Help you to find the End Portal using Math. Build using Tauri"
authors = ["mmnbv"]
license = "MIT"
repository = "https://github.com/mmnvb/portal_finder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
